# stark3d

./: .gitignore  CMakeLists.txt  README.md  gen_msvs2017.py  stark3d.gyp
app/: build.gradle  main.cpp
breakout/: ball.cpp  ball.h  base.h  breakout.vcxproj  breakout.vcxproj.filters  game.cpp  game.h  gamelevel.cpp  gamelevel.h  gameobject.cpp  gameobject.h  main.cpp  particles.h  post.cmd
breakout/resource/shader/: normal.vert  normal1.frag  particle.frag  particle.vert  sprite.frag  sprite.vert
deprecated/breakout/: ball.cpp  base.h  breakout.vcxproj  game.cpp  game.h  gameobject.h  main.cpp  particles.cpp
deprecated/breakout/resource/shader/: normal.frag  normal1.vert  sprite.frag  sprite.vert
deprecated/editor/: editor.gypi  editor.rc  mainwindow.ui  qss.qrc  renderpanel.cpp
editor/: editor.gypi  editor.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderpanel.cpp  renderpanel.h
examples/minimal_d3d11/: code.cpp  data.h
examples/minimal_gl/: main.cpp
lib/: assimp.gypi  freetype.gypi  glew.gypi  glfw.gypi  lua.gypi
lib/freeglut-2.8.1/lib/x86/: freeglut.exp  freeglut.ilk  freeglut.lib
lib/glload/lib/x64/: glload.lib  glloadD.lib
lib/glload/lib/x86/: glload.lib  glloadD.lib
msvs2017/: assimp.vcxproj  assimp.vcxproj.filters  freetype.vcxproj  freetype.vcxproj.filters  glew.vcxproj  glew.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters  stark.vcxproj  stark.vcxproj.filters  stark3d.sln
res/: scene.txt
res/bsp/: README.md
res/gltf/Triangle/: 123.gltf
res/shader/: mesh3d.frag  mesh3d.vert  normal.frag
res/shader/screen_effects/: motion_blur.frag  motion_blur.vert  texture_map.frag
scripts/: app.vcxproj  editor.vcxproj  editor.vcxproj.filters  fmt.vcxproj  freetype.vcxproj  freetype.vcxproj.filters  glew.vcxproj  glew.vcxproj.filters  glfw.vcxproj  lua.vcxproj  premake5.lua  stark.vcxproj  stark.vcxproj.filters  stark3d.sln
src/: vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp
stark3d/: CMakeLists.txt  color.cpp  color.hpp  common.gypi  data.h  effect.h  engine.h  geom.h  global.h  imgui.ini  main.cpp  main_win.cpp  module.cpp  module.h  modules.cpp  modules.h  rasterizer.cpp  rasterizer.hpp  renderaction.cpp  renderaction.h  resources.cpp  resources.h  scene.cpp  scene.h  shaders.hlsl  stark.gypi  stark3d.h  stark3d.sln  stark3d.vcxproj  stark3d.vcxproj.filters
stark3d/effect/: motion_blur.cpp  normal.cpp  screen_texture_map.cpp
stark3d/graphics/: program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h
stark3d/learnsomething/: eigen.cpp  learnsomething.h  raytracing.cpp  sdf.cpp  stb.cpp
stark3d/resource/shader/: bsp.frag  bsp.vert  normal.frag  normal.vert
stark3d/resource/shader/screen_effects/: texture_map.frag
stark3d/scene/: bbox.cpp  bbox.h  bsp.cpp  bsp.h  camera.cpp  camera.h  color.cpp  color.h  component.h  cube.cpp  cube.h  entity.cpp  entity.h  font.cpp  font.h  line.cpp  line.h  material.cpp  material.h  mesh.cpp  mesh.h  meshrenderer.cpp  meshrenderer.h  node.cpp  node.h  object.h  particle.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  texture.cpp  texture.h  transform.cpp  transform.h  world.cpp  (+1 more)
stark3d/scene/unused/: bsp.cpp  color.h  cube.cpp  font.h  node.h  particle.h  sprite.cpp  terrain.cpp  world.h
stark3d/shader/: normal.frag  normal.vert
stark3d/src/: main.cpp
stark3d/unused/: geom.cpp  main_skia.cpp  module.h  raytracer.cpp  renderaction.cpp  renderaction.h  scene.h  softrenderer.cpp  softrenderer.h
stark3d/utils/: bgfxutils.cpp  bgfxutils.h  bitmap.cpp  bitmap.h  data.cpp  data.h  deviceinfo.cpp  deviceinfo.h  fileutils.cpp  fileutils.h  framework.h  geom.h  gldefine.h  linmath.h  loader.cpp  loader.h  log.cpp  log.h  math.h  matrix.cpp  matrix.h  modules.cpp  modules.h  renderdevice.cpp  renderdevice.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  texture.cpp  texture.h  utils.cpp  utils.h
test_vulkan/: CMakeLists.txt
tools/: run_deployqt.py
