# ==================================================================================================
# CMake
# ==================================================================================================
cmake_minimum_required(VERSION 3.19)

# ==================================================================================================
# Project declaration
# ==================================================================================================
project(STARK)

# ==================================================================================================
# Options
# ==================================================================================================

# ==================================================================================================
# CMake policies
# ==================================================================================================
if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.12")
    cmake_policy(SET CMP0074 NEW)
endif()

# ==================================================================================================
# OS specific
# ==================================================================================================
if (WIN32)
endif()

# ==================================================================================================
#  Paths
# ==================================================================================================
# Where our external libs are
set(EXTERNAL ${CMAKE_CURRENT_SOURCE_DIR}/third_party)

# Where our libraries are
set(LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/libs)

# Where our stark3d code is
set(STARK3D ${CMAKE_CURRENT_SOURCE_DIR})

# Where our tools are
set(TOOLS ${CMAKE_CURRENT_SOURCE_DIR}/tools)

# ==================================================================================================
# General compiler flags
# ==================================================================================================

# ==================================================================================================
# Release compiler flags
# ==================================================================================================

# ==================================================================================================
# Debug compiler flags
# ==================================================================================================

# ==================================================================================================
# Linker flags
# ==================================================================================================

# ==================================================================================================
# Project flags
# ==================================================================================================

# ==================================================================================================
# Sub-projects
# ==================================================================================================

add_subdirectory(${STARK3D}/stark3d)
add_subdirectory(${STARK3D}/test_vulkan)

add_subdirectory(${EXTERNAL}/libassimp/tnt)
add_subdirectory(${EXTERNAL}/libpng/tnt)
add_subdirectory(${EXTERNAL}/libsdl2/tnt)
add_subdirectory(${EXTERNAL}/libz/tnt)
add_subdirectory(${EXTERNAL}/tinyexr/tnt)

# Add third party libraries
add_subdirectory(third_party)













