cmake_minimum_required(VERSION 3.19)
project(stark3d C ASM)

set(TARGET stark3d)
set(PUBLIC_HDR_DIR include)

# ==================================================================================================
# Sources and headers
# ==================================================================================================
set(PUBLIC_HDRS
    include/stark3d.h)
    
set(SRCS
    src/main.cpp)

# ==================================================================================================
# Includes & target definition
# ==================================================================================================
# specify where our headers are
include_directories(${PUBLIC_HDR_DIR})
include_directories(${EXTERNAL}/boost_1_80_0)

# we're building a library
#add_library(${TARGET} STATIC ${PRIVATE_HDRS} ${PUBLIC_HDRS} ${SRCS})
add_executable(${TARGET} ${SRCS})

# ==================================================================================================
# Dependencies
# ==================================================================================================

# ==================================================================================================
# Compiler flags
# ==================================================================================================